manager interface implementation